2009-05-15 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Show amount of the recipient in the list view (Recipient list module) and the last step of the sending wizard (module direct mail). 

2009-03-21 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Preview icon (HTML and plaintext) will use correct domain
	* Fetching will use the correct domain in the multidomain environment.
	
2009-03-20 Ivan Kartolo <ivan.kartolo@dkd.de>
	* changed: Attachment up to 10000 KB
	
2009-01-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug: Plaintext rendering of tt_news passes the images not in an array. (Thanks to Andrea Herzog for pointing me this one)
	
2008-12-10 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9912: boundary for the attached media depends on the message ID
	
2008-11-30 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9570: message ID will always be new generated, everytime setHeaders is called.
	
2008-11-23 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9764: added missing field in cache_sys_dmail_stat
	* Fixed bug #9767: check if PID given is numeric (Importer)
	
2008-11-20 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed: double semicolon in content type declaration if sending multiparts email
	
2008-10-29 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9580: wrong parameter type, if using nested "from other recipient lists"

2008-10-23 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug: Statistic could show wrong linked text and links.

2008-10-09	Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9406: Filter csv import for more than 2 doublette
	* Feature: Direct Mail Engine can now be started from Gabriel.
	* Fixed bug: Format of recipient address is changed to only email for windows platform, since PHP mail function in Windows can't handle "Name <email>"
	* emconf updated: suggested extension Gabriel

2008-07-23  Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #8987: assigning categories while creating a direct mail does not work correctly
